--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dns-checker-cli",
+  "name": "@sousvidal/dns-checker-cli",
   "version": "1.0.0",
   "description": "A CLI tool to check DNS records for a domain",
   "type": "module",
@@ -9,6 +9,8 @@
   "scripts": {
     "dev": "tsx src/index.ts",
     "build": "tsup",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "lint": "eslint src/",
     "prepublishOnly": "npm run build"
   },
@@ -18,6 +20,13 @@
     "checker"
   ],
   "license": "MIT",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "chalk": "^5.6.2",
     "cli-table3": "^0.6.5",
@@ -31,6 +40,7 @@
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.54.0"
+    "typescript-eslint": "^8.54.0",
+    "vitest": "^4.0.18"
   }
 }
